hphp/test/slow/parser/hh-reserved-name-classname-1.php.expectf
Fatal error: Cannot use 'Classname' as class name as it is reserved in %s on line 3
